correct word overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -105,10 +105,10 @@
     }
 
     .subreddit-list {
-      max-height: 420px; /* Set a maximum height */
+      max-height: 420px; 
       overflow-y: auto; /* Enable vertical scrolling */
       scrollbar-color: rgb(167, 166, 166) rgb(65, 65, 65); /* Set thumb and track colors */
-      scrollbar-width: thin; /* For Firefox */
+      scrollbar-width: thin; 
       margin-right:5px;
       margin-left: 20px;
       
@@ -165,7 +165,7 @@
       width: 80%;
       display: block;
       margin: auto;
-      min-height: auto;
+      min-height: 0;
       max-height: 450px;
       border-radius: 5px;
       font-size: 0.5rem;
@@ -203,6 +203,7 @@
 
     .comments-container{
       width: 95%;
+      max-width: 100vw;
       margin-top: 10px;
       margin: auto;
       
@@ -217,6 +218,11 @@
         font-size: 0.8rem;
         font-weight: 400;
         line-height: 2;
+        word-wrap: break-word;       
+        overflow-wrap: break-word;   
+        word-break: break-word;
+        max-width: 100%;
+
         transition: box-shadow 0.3s ease-in-out;
 
         &:hover{
@@ -355,7 +361,7 @@
   .content-container {
    
     display: flex;
-    flex-direction: column; /* Stack items vertically */
+    flex-direction: column; 
     width: 95%;
     margin: 10px auto 0;
     
@@ -430,7 +436,6 @@
           font-weight: 400;
         }
         .news-image{ 
-          min-height: auto;
           max-height: 300px;
           font-size: 0.5rem;
           font-weight: 100;
